--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -34,4 +34,7 @@
     outline: none;
     width: 10em;
     margin: 10px auto;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
+
