--- a/src/Payment.css
+++ b/src/Payment.css
@@ -1,5 +1,5 @@
 .payment {
-    background-color: #fff;
+    background-color: white;
     width: 95%;
     margin: 0 auto;
 }
@@ -7,10 +7,10 @@
 .payment__container > h1 {
     text-align: center;
     padding: 10px;
-    font-weight: 500;
+    font-weight: 400;
     background-color: rgb(234, 237, 237);
     border-bottom: 1px solid lightgray;
-}
+  }
 
 .payment__container > h1 a {
     text-decoration: none;
@@ -30,3 +30,24 @@
 .payment__address, .payment__items, .payment__details {
     flex: 0.8;
 }
+  
+.payment__details > form {
+    max-width: 400px;
+  }
+
+  .payment__details > h3 {
+    padding-bottom: 20px;
+  }
+
+
+  .payment__details > form > div > button {
+    background: #f0c14b;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    font-weight: bolder;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: #111;
+  }
