--- a/src/Products.css
+++ b/src/Products.css
@@ -3,29 +3,38 @@
     flex-direction: column;
     justify-content: flex-end;
     min-width: 100px;
-    max-height: 400px;
     background-color: #ffffff;
     margin: 10px 40px;
-    padding: 20px;
+    padding: 10px 20px;
     width: 60%;
     z-index: 1;
     border-radius: 10px; 
     float: right;
     position: absolute; 
     top: 7em;
+    bottom: 2em;
     right: 20px;
+    text-align:justify; 
+}
+.scrollable {
+    margin: 0px 10px;
+    overflow-y: auto; 
+}
+.scrollable::-webkit-scrollbar {
+    display: none;
 }
 .products__info {
     height: 100px;
     margin-bottom: 20px;
 }
 .products__title {
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 700;
 }
 .products__price {
     margin: 5px 0;
 }
-.products > img {
+.scrollable > img {
     width: 100%;
     max-height: 200px;
     object-fit: contain;
@@ -34,7 +43,11 @@
 .products__rating {
     display: flex;
 }
-.products > button {
+.button__cart {
+    margin: 0 auto;
+    width: 15%;
+}
+.button__cart > button {
     background-color: #f0c14b;
     border: 1px solid;
     border-color: #a88734 #9c7e31 #846a29;
@@ -45,16 +58,22 @@
     margin: 10px auto;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-.products > button:hover, .products > button:focus {
+.button__cart > button:hover, .button__cart > button:focus {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     transform: translateY(-5px);
 }
 
-.products > button:active {
+.button__cart > button:active {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     transform: translateY(-2px);
 }
 
+.products__description {
+    margin: 20px 0;
+}
+.products__description > p {
+    margin: 10px 0;
+}
 .product-list{
     margin-top: 2em;
 }
