--- a/src/Home.css
+++ b/src/Home.css
@@ -8,6 +8,9 @@
     z-index: -1;
     margin-bottom: -150px;
 }
+.home__group {
+    margin-top: -5em;
+}
 .home__row {
     display: flex;
     z-index: 1;
