--- a/src/Orders.css
+++ b/src/Orders.css
@@ -5,3 +5,14 @@
 .orders > h1 {
     margin: 30px 0;
 }
+.order__review > button{
+    float: right;
+    margin-top: 4em;
+    background-color: #f0c14b;
+    border-radius: 2px;
+    height: 30px;
+    width: 10%;
+    border: 1px solid;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: #111;
+}
