--- a/src/Orders.css
+++ b/src/Orders.css
@@ -8,11 +8,15 @@
 .order__review > button{
     float: right;
     margin-top: 4em;
-    background-color: #f0c14b;
-    border-radius: 2px;
-    height: 30px;
-    width: 10%;
+    background-color: #f0c14b; 
     border: 1px solid;
     border-color: #a88734 #9c7e31 #846a29;
+    border-radius: 10em;
+    width: 10em;
+    padding: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    outline: none;
+    border: 1px solid;
     color: #111;
+    cursor: pointer;
 }
